
[tool.poetry]
name = "cyber-mapping-kg"
version = "0.1.0"
description = "Demo repository for Cyber Mapping Knowledge Graph"
readme = "README.md"
authors = ["Zeyno Dodd <conjectura.ground@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.23.1"
pypdf3 = "^1.0.6"
langchain = "^0.3.25"
python-dotenv = "^1.0.1"
langchain-neo4j = "^0.4.0"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.21"
langchain-anthropic = "^0.3.15"
langgraph = "^0.4.8"
langmem = "^0.0.8"
langsmith = "^0.3.45"
beautifulsoup4 = "^4.12.3"
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.local
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
